# 98modem

./: CMakeLists.txt  CMakePresets.json  README.md
driver/vxd/: MAKEFILE  SOURCES  VMODEM.DEF  build_vxd.bat  dos_uart_glue.asm  vcomm_glue.asm  vxd_ctrl.asm
include/: ipc_helper.h  ipc_shared.h  modem_core.h  trace.h
install/: VMODEM.vxd  vmodem.inf
src/common/: modem_core.c
src/helper/: diag_main.c  helper_main.c  ipc_helper.c  net_common.c  net_common.h  net_winsock.c  net_winsock.h  session_log.c  session_log.h  telnet_proto.c  telnet_proto.h  vmodem.ini  vmodem_peer.c  vmodem_peer.h
src/vxd/: dos_uart.c  dos_uart.h  ipc_vxd.c  serial_port.c  serial_vxd.c  trace.c
tests/: dos_uart_tests.c  helper_net_tests.c  helper_peer_tests.c  helper_telnet_tests.c  modem_core_tests.c
